# WebRTCProject

./: .gitignore  CMakeLists.txt  README.md
certificates/: cert.pem  key.pem
client/: main.cpp
docs/: scheme.drawio  scheme2.drawio
http_server/: package-lock.json  package.json  server.js
http_server/db/: login.db
http_server/public/: about.html  admin.html  index.html  stream.html
http_server/public/css/: about.css  admin.css  footer.css  main.css  main_1.css
http_server/public/js/: clicked.js  ws_client.js
include/: logging_server.h
include/Logger/: iterative_logging_server.h  logging_handler.h  logging_server.h  reactive_logging_server.h
src/: main.cpp
src/Logger/: iterative_logging_server.cpp  logging_handler.cpp  logging_server.cpp  reactive_logging_server.cpp
